--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -5,6 +5,18 @@
       value: Katherine Zhou
     - name: Preferred Name 
       value: Kit
+    - name: E-mail
+      value: kzhou[@]holycross[.]edu
+
+- title: Academic Positions
+  type: time_table
+  contents:
+    - title: Assistant professor
+      institution: College of the Holy Cross
+      year: 2025 - 
+    - title: Assistant professor
+      institution: Southeastern Louisiana University
+      year: 2024 - 2025
 
 - title: Education
   type: time_table
@@ -19,24 +31,15 @@
       institution: Vassar College
       year: 2015
 
-- title: Academic Positions
-  type: time_table
-  contents:
-    - title: Assistant professor
-      institution: College of the Holy Cross
-      year: Fall 2025 - Current
-    - title: Assistant professor
-      institution: Southeastern Louisiana University
-      year: Fall 2024 - Spring 2025
-
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Microeconomic theory
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Game theory
+        - Two-sided matching
+    - title: Applied microeconomics
       items:
-        - Description 1.
-        - Description 2.
+        - Labor economics
+        - Economics of higher Education
+        - Economics of foster care
